sqlman: QueryDslサポート修正
FindBugs指摘対応。